added formatting and css to where crystals, scores to match and instructions will go

--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
   src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
   integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
   crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="assets/css/reset.css">
+  <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <div id="randomNumber"></div>
+  <h1>Crystal Collector</h1>
+  <div style ="  ">
+  <div class="wrapper">
+    <div class = "item1">Instructions</div>
+    <div class="item2">2</div>
+    <div class="item2">3</div>
+    <div class="item2">4</div>
+    <div class="item2">5</div>
+    <div class="item6">score</div>
+  </div>
+
+
 </body>
 <script type="text/javascript" src="assets/js/game.js"></script>
 </html>
