--- a/index.html
+++ b/index.html
@@ -8,21 +8,26 @@
   integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
   crossorigin="anonymous"></script>
   <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="icon" type="image/png" href="assets/images/favicon.ico">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <h1>Crystal Collector</h1>
-  <div style ="  ">
-  <div class="wrapper">
+  <div class="wrapper container">
     <div class = "item1">Instructions</div>
-    <div class="item2">2</div>
-    <div class="item2">3</div>
-    <div class="item2">4</div>
-    <div class="item2">5</div>
+    <div class="item2"><img src="assets/images/diamond.png"></div>
+    <div class="item2"><img src="assets/images/sapphire.png"></div>
+    <div class="item2"><img src="assets/images/ruby.gif"></div>
+    <div class="item2"><img src="assets/images/emerald.png"></div>
     <div class="item6">score</div>
   </div>
 
-
 </body>
+<div id="connect">
+  <h2>Connect With Me</h2>
+  <a href="https://github.com/luigicampbell" target="_blank"><img src="assets/images/if_github_square_black_107109.png"   class="networking" alt="Github"></a>
+  <a href="https://www.linkedin.com/in/luigi-campbell-464838149/" target="_blank"><img src="assets/images/if_linkedin_square_color_107091.png"   class="networking" alt="LinkedIn"></a>
+  <a href="https://stackoverflow.com/users/8793814/luigi" target="_blank"><img src="assets/images/if_StackOverflow_273179.png"   class="networking" alt="Stackoverflow"></a>
+</div>
 <script type="text/javascript" src="assets/js/game.js"></script>
 </html>
