--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <h1>Crystal Collector</h1>
   <div class="wrapper container">
     <div class = "item1">Instructions</div>
-    <div class="item2"><img src="assets/images/diamond.png"></div>
-    <div class="item2"><img src="assets/images/sapphire.png"></div>
-    <div class="item2"><img src="assets/images/ruby.gif"></div>
-    <div class="item2"><img src="assets/images/emerald.png"></div>
+    <div class="item2"><img class="auth-image" src="assets/images/diamond.png"></div>
+    <div class="item2"><img class="auth-image" src="assets/images/sapphire.png"></div>
+    <div class="item2"><img class="auth-image" src="assets/images/ruby.gif"></div>
+    <div class="item2"><img class="auth-image"  src="assets/images/emerald.png"></div>
     <div class="item6">score</div>
   </div>
 
