set opacity values to networking class and logged functions

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
   <h1>Crystal Collector</h1>
   <div class="wrapper container">
     <div class = "item1">Instructions</div>
-    <div class="item2"><img class="auth-image" src="assets/images/diamond.png"></div>
-    <div class="item2"><img class="auth-image" src="assets/images/sapphire.png"></div>
-    <div class="item2"><img class="auth-image" src="assets/images/ruby.gif"></div>
-    <div class="item2"><img class="auth-image"  src="assets/images/emerald.png"></div>
+    <div class="item2"><img id = "crystal1" class="auth-image" src="assets/images/diamond.png"></div>
+    <div class="item2"><img id = "crystal2" class="auth-image" src="assets/images/sapphire.png"></div>
+    <div class="item2"><img id = "crystal3" class="auth-image" src="assets/images/ruby.gif"></div>
+    <div class="item2"><img id = "crystal4" class="auth-image"  src="assets/images/emerald.png"></div>
     <div class="item6">score</div>
   </div>
-
+  <div id="connect">
+    <h2>Connect With Me</h2>
+    <a href="https://github.com/luigicampbell" target="_blank"><img src="assets/images/if_github_square_black_107109.png"   class="networking" alt="Github"></a>
+    <a href="https://www.linkedin.com/in/luigi-campbell-464838149/" target="_blank"><img src="assets/images/if_linkedin_square_color_107091.png"   class="networking" alt="LinkedIn"></a>
+    <a href="https://stackoverflow.com/users/8793814/luigi" target="_blank"><img src="assets/images/if_StackOverflow_273179.png"   class="networking" alt="Stackoverflow"></a>
+  </div>
 </body>
-<div id="connect">
-  <h2>Connect With Me</h2>
-  <a href="https://github.com/luigicampbell" target="_blank"><img src="assets/images/if_github_square_black_107109.png"   class="networking" alt="Github"></a>
-  <a href="https://www.linkedin.com/in/luigi-campbell-464838149/" target="_blank"><img src="assets/images/if_linkedin_square_color_107091.png"   class="networking" alt="LinkedIn"></a>
-  <a href="https://stackoverflow.com/users/8793814/luigi" target="_blank"><img src="assets/images/if_StackOverflow_273179.png"   class="networking" alt="Stackoverflow"></a>
-</div>
+
 <script type="text/javascript" src="assets/js/game.js"></script>
 </html>
