added some of my original music content and set autoplay

--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 </head>
 <body>
   <h1>Crystal Collector</h1>
+  <audio autoplay loop>
+	<source src = "assets/audio/bgm.mp3">
+</audio>
+<audio id = "crystal1Sound"><source src = "assets/audio/crystal1.mp3">
+</audio>
+<audio id = "crystal2Sound"><source src = "assets/audio/crystal2.mp3">
+</audio>
+<audio id = "crystal3Sound"><source src = "assets/audio/crystal3.mp3">
+</audio>
+<audio id = "crystal4Sound"><source src = "assets/audio/crystal4.mp3">
+</audio>
   <div class="wrapper container">
     <div class = "item1">Instructions</div>
     <div class="item2"><img id = "crystal1" class="auth-image" src="assets/images/diamond.png"></div>
