working on functions layout and how to get them to behave sequentially

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link href="https://fonts.googleapis.com/css?family=Fascinate" rel="stylesheet">
   <link rel="icon" type="image/png" href="assets/images/favicon.ico">
   <link rel="stylesheet" href="assets/css/style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
   <h1>Crystal Collector</h1>
@@ -21,7 +20,7 @@
       <div class="item2"><img id = "crystal2img" class="auth-image" src="assets/images/sapphire.png"></div>
       <div class="item2"><img id = "crystal3img" class="auth-image" src="assets/images/ruby.gif"></div>
       <div class="item2"><img id = "crystal4img" class="auth-image"  src="assets/images/emerald.png"></div>
-      <div class="item6">wins losses</div>
+      <div class="item6"><span id = "wins"></span><span id = "losses"></span></div>
     </div>
     <div id="connect">
       <h2>Connect With Me</h2>
@@ -30,6 +29,6 @@
       <a href="https://stackoverflow.com/users/8793814/luigi" target="_blank"><img src="assets/images/if_StackOverflow_273179.png"   class="networking" alt="Stackoverflow"></a>
     </div>
   </body>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="assets/js/game.js"></script>
   </html>
