diagnosing why array is empty after function shuffle

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </audio>
 
     <div class="wrapper container">
-      <div class = "item1"><span id = "randomNumber"></span><span id = "userTotal"></span></div>
+      <div class = "item1"><span id = "matchMe"> </span> / <span id = "userTotal"></span></div>
       <div class="item2"><img id = "crystal1img" class="auth-image" src="assets/images/diamond.png"></div>
       <div class="item2"><img id = "crystal2img" class="auth-image" src="assets/images/sapphire.png"></div>
       <div class="item2"><img id = "crystal3img" class="auth-image" src="assets/images/ruby.gif"></div>
