working on crystal bject and renaming values

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Crystal Collector</h1>
   <audio autoplay loop>
-    <source src = "assets/audio/#.mp3">
+    <source src = "assets/audio/bgm.mp3">
     </audio>
 
     <div class="wrapper container">
@@ -31,4 +31,5 @@
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="assets/js/game.js"></script>
+  <script type="text/javascript" src="assets/js/logic.js"></script>
   </html>
