wonder if this works now

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
         <h1>Crystal Collector</h1>
         <audio id = "sfx"></audio>
+        <audio id = "bgm"></audio>
         <div class="wrapper container">
           <span id = "instructions">Try to <strong>match</strong> the <em>hidden</em> crystal points to the magic number!</span>
           <div class = "item1"><span id = "matchMe"> </span> / <span id = "userTotal"></span></div>
